unpackaged/main/default/objects/metazoa3__snapshot_note__c/metazoa3__snapshot_note__c.object-meta.xml
<CustomObject>
    <description>This is an administrative object for Snapshot Org Management. This object records user notes and other information about Metadata assets.</description>
    <label>Snapshot Note</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Snapshot Notes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>