unpackaged/main/default/objects/metazoa3__snapshot_note__c/fields/metazoa3__asset_information__c.field-meta.xml
<CustomField>
    <fullName>metazoa3__asset_information__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Asset Information</label>
    <length>130000</length>
    <type>LongTextArea</type>
</CustomField>