unpackaged/main/default/objects/metazoa3__snapshot_note__c/fields/metazoa3__asset_name__c.field-meta.xml
<CustomField>
    <fullName>metazoa3__asset_name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Asset Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>