unpackaged/main/default/objects/metazoa3__snapshot_note__c/fields/metazoa3__more_information__c.field-meta.xml
<CustomField>
    <fullName>metazoa3__more_information__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>More Information</label>
    <length>30000</length>
    <type>LongTextArea</type>
</CustomField>